--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TriggerDatabase</title>
     <%= csrf_meta_tags %>
 
@@ -9,13 +12,46 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="<%= root_path %>">
+            TriggerDatabase
+          </a>
+        </div>
 
-    <%= form_with url: movies_path, method: 'GET', local: true do |f| %>
-      <%= f.label :q, 'Search' %>
-      <%= f.text_field :q, id: :q %>
-      <%= f.submit 'Search' %>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav navbar-right">
+            <% if signed_in? %>
+              <%= active_link_to "Account", edit_user_registration_path, wrap_tag: :li %>
+              <%= active_link_to "Sign Out", destroy_user_session_path, wrap_tag: :li, method: :delete %>
+            <% else %>
+              <%= active_link_to "Sign In", new_user_session_path, wrap_tag: :li %>
+              <%= active_link_to "Sign Up", new_user_registration_path, wrap_tag: :li %>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <% if flash.any? %>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <% flash.each do |key, value| %>
+              <div class="<%= flash_class(key) %>">
+                <%= value %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
     <% end %>
 
     <%= yield %>
