--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     </nav>
 
     <% if flash.any? %>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12">
             <% flash.each do |key, value| %>
@@ -54,6 +54,12 @@
       </div>
     <% end %>
 
-    <%= yield %>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
