--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-xs-12">
         <div class="input-group input-group-lg">
           <%= f.label :q, 'Search', class: 'sr-only' %>
-          <%= f.text_field :q, id: :q, value: params[:q], autofocus: true, class: 'form-control' %>
+          <%= f.text_field :q, id: :q, value: params[:q], autofocus: true, class: 'form-control', placeholder: 'Search for a movie here...' %>
           <div class="input-group-btn">
             <button type="submit" class="btn btn-default">Search</button>
           </div>
