--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TriggerDatabase</title>
+    <title>filmtriggers.com</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="<%= root_path %>">
-            TriggerDatabase
+            filmtriggers.com
           </a>
         </div>
 
