Add a slogan sort of thing

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -29,6 +29,9 @@
   </h1>
 
   <p>
+    A community-curated list of film triggers.
+  </p>
+  <p>
     Search for a movie above to see the list of triggers that our community has added to it!
   </p>
 <% end %>
