--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,7 +16,7 @@
 
 <% if params[:q].present? %>
   <div class="list-group">
-    <% @results.each do |result| %>
+    <% @movies.each do |result| %>
       <%= link_to movie_path(result['id']), class: 'list-group-item movie' do %>
         <%= image_tag poster_url_for(result[:poster_path]), width: '92', height: '138' %>
         <%= result['original_title'] %>
