--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-12">
     <h1 class="media-heading movie-title">
-      <%= @movie[:title] %>
+      <%= @movie.title %>
     </h1>
   </div>
   <div class="col-xs-12 col-sm-4 col-md-4">
     <div class="panel panel-default">
       <div class="panel-body text-center">
-        <%= image_tag large_poster_url_for(@movie[:poster_path]), width: '300', height: '450', class: 'img-responsive movie-image' %>
+        <%= image_tag @movie.large_poster_url, width: '300', height: '450', class: 'img-responsive movie-image' %>
       </div>
     </div>
   </div>
@@ -15,13 +15,13 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <h2 class="movie-tagline">
-          <%= @movie[:tagline] %>
+          <%= @movie.tagline %>
         </h2>
         <p class="movie-overview">
-          <%= @movie[:overview] %>
+          <%= @movie.overview %>
         </p>
-        <% if @movie[:imdb_id].present? %>
-          <%= link_to @imdb_url, @imdb_url %>
+        <% if @movie.imdb_url.present? %>
+          <%= link_to @movie.imdb_url, @movie.imdb_url %>
         <% end %>
       </div>
     </div>
@@ -29,9 +29,9 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <h4>Triggers</h4>
-        <% if @triggers.any? %>
+        <% if @movie.triggers.any? %>
           <ul class="list-group">
-            <% @triggers.each do |trigger| %>
+            <% @movie.triggers.each do |trigger| %>
               <li class="list-group-item movie-trigger">
                 <%= trigger.label %> x <%= trigger['count'] %>
               </li>
@@ -46,7 +46,7 @@
         <h4>Add a trigger</h4>
         <% if user_signed_in? %>
           <%= form_with url: triggers_path, local: true do |f| %>
-            <%= f.hidden_field :movie_id, value: @movie[:id] %>
+            <%= f.hidden_field :movie_id, value: @movie.id %>
             <div class="form-group">
               <%= f.label :label, 'Trigger', class: 'sr-only' %>
               <%= f.select :label, Trigger::TRIGGERS, {selected: 'violence'}, id: :label, class: 'form-control t-trigger-select' %>
