--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navbar">
+          <p class="navbar-text">
+            the community-curated film trigger list
+          </p>
           <ul class="nav navbar-nav navbar-right">
             <% if signed_in? %>
               <%= active_link_to "Account", edit_user_registration_path, wrap_tag: :li %>
