--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-xs-12">
         <div class="input-group input-group-lg">
           <%= f.label :q, 'Search', class: 'sr-only' %>
-          <%= f.text_field :q, id: :q, value: params[:q], autofocus: true, class: 'form-control', placeholder: 'Search for a movie here...' %>
+          <%= f.text_field :q, id: :q, value: params[:q], autofocus: true, class: 'form-control', placeholder: 'Search movies...' %>
           <div class="input-group-btn">
             <button type="submit" class="btn btn-default">Search</button>
           </div>
@@ -15,23 +15,31 @@
 </div>
 
 <% if params[:q].present? %>
-  <div class="list-group">
-    <% @movies.each do |movie| %>
-      <%= link_to movie_path(movie.id), class: 'list-group-item movie' do %>
-        <%= image_tag movie.poster_url, width: '92', height: '138' %>
-        <%= movie.original_title %>
+  <div class="search-results">
+    <h2>Search results</h2>
+    <div class="list-group">
+      <% @movies.each do |movie| %>
+        <%= link_to movie_path(movie.id), class: 'list-group-item movie' do %>
+          <%= image_tag movie.poster_url, alt: movie.title, width: '92', height: '138' %>
+          <%= movie.original_title %>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 <% else %>
-  <h1>
-    Welcome to filmtriggers.com
-  </h1>
-
-  <p>
-    A community-curated list of film triggers.
-  </p>
-  <p>
-    Search for a movie above to see the list of triggers that our community has added to it!
-  </p>
+  <div class="now-playing">
+    <h2>Now playing</h2>
+    <div class="row">
+      <% @now_playing.sample(4).each do |movie| %>
+        <div class="col-xs-12 col-sm-3">
+          <%= link_to movie_path(movie.id), class: 'thumbnail' do %>
+            <%= image_tag movie.large_poster_url, alt: movie.title %>
+            <div class="caption">
+              <h3><%= movie.title %></h3>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 <% end %>
