--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,22 +1,22 @@
-<div class="row">
+<div class="row movie">
   <div class="col-xs-12">
-    <h1 class="media-heading movie-title">
+    <h1 class="movie-title">
       <%= @movie.title %>
+      <small>
+        <%= @movie.tagline %>
+      </small>
     </h1>
   </div>
   <div class="col-xs-12 col-sm-4 col-md-4">
     <div class="panel panel-default">
       <div class="panel-body text-center">
-        <%= image_tag @movie.large_poster_url, width: '300', height: '450', class: 'img-responsive movie-image' %>
+        <%= image_tag @movie.large_poster_url, alt: @movie.title, width: '300', height: '450', class: 'img-responsive movie-image' %>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-8 col-md-8">
     <div class="panel panel-default">
       <div class="panel-body">
-        <h2 class="movie-tagline">
-          <%= @movie.tagline %>
-        </h2>
         <p class="movie-overview">
           <%= @movie.overview %>
         </p>
