--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row movie">
   <div class="col-xs-12">
     <h1 class="movie-title">
-      <%= @movie.title %>
+      <%= @movie.title_with_year %>
       <small>
         <%= @movie.tagline %>
       </small>
