Bigger movie title in search results

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -2,6 +2,13 @@
   padding-bottom: $line-height-computed;
 }
 
+.search-results {
+  .movie {
+    .movie-title {
+      display: inline-block;
+    }
+  }
+}
 .now-playing {
   .thumbnail {
     text-align: center;
