Add <title> for all pages

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,6 +15,7 @@
 </div>
 
 <% if params[:q].present? %>
+  <% title 'Search results' %>
   <div class="search-results">
     <h2>Search results</h2>
     <div class="list-group">
