--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Community-curated list of film triggers | filmtriggers.com</title>
+
+    <% meta_tag_defaults = { site: 'filmtriggers.com', title: 'Community-curated list of film triggers', reverse: true } %>
+    <%= display_meta_tags(meta_tag_defaults) %>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
